--- a/summary.html
+++ b/summary.html
@@ -14,7 +14,12 @@
     <script src="js/navBar.js" defer></script>
     <script src="js/summary.js" defer></script>
     <script src="js/header.js" defer></script>
-    <script src="js/board.js" defer></script>
+    <script src="./js/board/initBoard.js" defer></script>
+    <script src="./js/board/searchBoard.js" defer></script>
+    <script src="./js/board/dragAndDropBoard.js" defer></script>
+    <script src="./js/board/openOverlays.js" defer></script>
+    <script src="./js/board/editTask1.js" defer></script>
+    <script src="./js/board/editTask2.js" defer></script>
     <script src="js/addTask.js"></script>
 
     <link rel="icon" type="image/x-icon" href="/img/join_logo.png" />
