header fixes and selection color

--- a/help.html
+++ b/help.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="/styles/help.css">
     <link rel="stylesheet" href="/styles/storage.css">
     <script src="js/header.js"></script>
+    <script src="js/help.js"></script>
     <link rel="icon" type="image/x-icon" href="/img/join_logo.png">
 </head>
-<body onload="includeHTML()">
+<body onload="initHelp()">
     <div w3-include-html="/templates/navBar.html"></div>
     <div w3-include-html="/templates/header.html"></div>
     <div class="savingError d-none"><div class="savingError1">Sorry for saving error! <button onclick="closeSavingError()" class="savingErrorButton">OK</button></div></div>
