--- a/legalNotice.html
+++ b/legalNotice.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Legal Notice</title>
-    <script src="js/storage.js"></script>
-    <script src="js/register.js"></script>
-    <script src="js/summary.js"></script>
-    <script src="js/index.js"></script>
+    <script src="./js/storageToken.js" defer></script>
+    <script src="js/storage.js" defer></script>
+    <script src="js/register.js" defer></script>
+    <script src="js/summary.js" defer></script>
+    <script src="js/index.js" defer></script>
     <script src="js/header.js"></script>
     <script src="/js/navBar.js"></script>
     <script src="js/legalNotice.js"></script>
