--- a/register.html
+++ b/register.html
@@ -28,20 +28,20 @@
             <h1 class="registerH1">Sign up</h1>
             <div class="blueLine"></div>
             <div class="marBot20 posRelative">
-                <input id="registerName" class="cursorPointer logInInputBorder fontSize16" placeholder="Name" minlength="3" type="text">
+                <input required id="registerName" class="cursorPointer logInInputBorder fontSize16" placeholder="Name" minlength="3" type="text">
                 <img onclick="focusOn('registerName')" class="posAbsolute logInInputPicture height15 right15 top11 cursorPointer" src="./img/registerPerson.png" alt="profile-img">
             </div>
             <div class="marBot20 posRelative">
-                <input id="registerEmail" class="cursorPointer logInInputBorder fontSize16" placeholder="Email" minlength="4" type="email">
+                <input required id="registerEmail" class="cursorPointer logInInputBorder fontSize16" placeholder="Email" minlength="4" type="email">
                 <img onclick="focusOn('registerEmail')" class="posAbsolute logInInputPicture height13 right15 top11 cursorPointer" src="./img/logInMail.png" alt="email-img">
             </div>
             <div class="marBot20 posRelative">
-                <input id="registerFirstPassword" oninput="showEyeOrLock('registerFirstPassword', 'registerFirstLock', 'registerFirstVisibilityOnOrOff')" class="cursorPointer logInInputBorder fontSize16" placeholder="Password" minlength="7" type="password">
+                <input required id="registerFirstPassword" oninput="showEyeOrLock('registerFirstPassword', 'registerFirstLock', 'registerFirstVisibilityOnOrOff')" class="cursorPointer logInInputBorder fontSize16" placeholder="Password" minlength="7" type="password">
                 <img id="registerFirstLock" onclick="focusOn('registerFirstPassword')" class="posAbsolute logInInputPicture height18 right15 top9 cursorPointer" src="./img/logInLock.png" alt="lock-img">
                 <img id="registerFirstVisibilityOnOrOff" onclick="visibilityOnOff('registerFirstVisibilityOnOrOff', 'registerFirstLock', 'registerFirstPassword')" class="posAbsolute right15 height15 top11 d-none cursorPointer" src="./img/logInVisibilityOff.png" alt="visibility-off-picture">
             </div>
             <div class="marBot20 posRelative">
-                <input id="registerSecondPassword" oninput="showEyeOrLock('registerSecondPassword', 'registerSecondLock', 'registerSecondVisibilityOnOrOff'), removeRedBorder('registerSecondPassword'), removeDiv('informNotTheSamePassword')" class="cursorPointer logInInputBorder fontSize16" placeholder="Confirm Password" minlength="7" type="password">
+                <input required id="registerSecondPassword" oninput="showEyeOrLock('registerSecondPassword', 'registerSecondLock', 'registerSecondVisibilityOnOrOff'), removeRedBorder('registerSecondPassword'), removeDiv('informNotTheSamePassword')" class="cursorPointer logInInputBorder fontSize16" placeholder="Confirm Password" minlength="7" type="password">
                 <img id="registerSecondLock" onclick="focusOn('registerSecondPassword')" class="posAbsolute logInInputPicture height18 right15 top9 cursorPointer" src="./img/logInLock.png" alt="lock-img">
                 <img id="registerSecondVisibilityOnOrOff" onclick="visibilityOnOff('registerSecondVisibilityOnOrOff', 'registerSecondLock', 'registerSecondPassword')" class="posAbsolute right15 height15 top11 d-none cursorPointer" src="./img/logInVisibilityOff.png" alt="visibility-off-picture">
                 <div id="informNotTheSamePassword" class="fontRed fontSize11 posAbsolute bottomMinus18 d-none">Ups! your password don't match</div>
@@ -52,7 +52,7 @@
                 <span id="registerSpanAccept" class="fontSize14 padLeft8 fontLightGrey">I accept the</span>   
                 <a class="noDecoration fontSize14 fontLightBlue hoverBlueUnderline padLeft8" href="./privacyPolicy.html">Privacy Policy</a>
             </div>
-            <button class="darkBtn cursorPointer fontSize16 fontBold">Sign up</button>
+            <button disabled class="darkBtn cursorPointer fontSize16 fontBold">Sign up</button>
         </form>
     </div>
     <section class="posAbsolute bot60LeftCenter opacity0to1">
