show successful editing

--- a/board.html
+++ b/board.html
@@ -39,6 +39,9 @@
         <p>Please log in and try again.</p>
         <div class="login-button-div"><a href="index.html" class="login-button">Login</a></div>
     </div>
+    <div id="informationOverlayEditingTask" class="posAbsolute zIndex101 width100Perc height100Vh dFlex justCenter alignCenter d-none bottomSlideInAndOut">
+        <div class="darkBtnWithoutHover">Your editing was successful!</div>
+    </div>
     <div class="main-board-container">
         <div onclick="closeTask()" id="boardTaskOverlay"></div>
         <div class="menubar">
