--- a/register.html
+++ b/register.html
@@ -17,7 +17,7 @@
     <div class="savingError d-none"><div class="savingError1">Sorry for saving error! <button onclick="closeSavingError()" class="savingErrorButton">OK</button></div></div>
     <div class="loadingError d-none"><div class="loadingError1">Sorry for loading error! <button onclick="closeLoadingError()" class="loadingErrorButton">OK</button></div></div>
     <div id="registerSignUpSuccessfully" class="fontSize16 registerSignUpSuccessfully d-none">
-        <span class="darkBtn bottomSlideInAndOut">You Signed Up successfully</span>
+        <span class="darkBtnWithoutHover bottomSlideInAndOut">You Signed Up successfully!</span>
     </div>
     <img class="posAbsolute registerJoinLogo" src="./img/joinLogoBig.png" alt="Join-Logo">
     <div class="overDivFormLogIn">
@@ -52,7 +52,7 @@
                 <span id="registerSpanAccept" class="fontSize14 padLeft8 fontLightGrey">I accept the</span>   
                 <a class="noDecoration fontSize14 fontLightBlue hoverBlueUnderline padLeft8" href="./privacyPolicy.html">Privacy Policy</a>
             </div>
-            <button disabled class="darkBtn cursorPointer fontSize16 fontBold">Sign up</button>
+            <button class="darkBtn cursorPointer fontSize16 fontBold">Sign up</button>
         </form>
     </div>
     <section class="posAbsolute bot60LeftCenter opacity0to1">
