--- a/contacts.html
+++ b/contacts.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="../styles/summary.css" />
     <script src="./js/storageToken.js" defer></script>
     <script src="./js/storage.js" defer></script>
-    <script src="./js/register.js" defer></script>
+    <script src="./js/register/initRegister.js" defer></script>
+    <script src="./js/register/registration.js" defer></script>
+    <script src="./js/register/designRegister.js" defer></script>
     <script src="./js/index.js" defer></script>
     <script src="./js/summary.js" defer></script>
     <script src="/js/navBar.js"></script>
