--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="/styles/storage.css">
     <script src="./js/storageToken.js" defer></script>
     <script src="./js/storage.js" defer></script>
-    <script src="./js/register.js" defer></script>
+    <script src="./js/register/initRegister.js" defer></script>
+    <script src="./js/register/registration.js" defer></script>
+    <script src="./js/register/designRegister.js" defer></script>
     <script src="./js/index.js" defer></script>
-    <!-- <script src="js/header.js"></script>
-  -->
-  <script src="js/summary.js"></script> 
+    <script src="js/summary.js"></script> 
     <link rel="icon" type="image/x-icon" href="/img/join_logo.png">
 </head>
 <body onload="initLogIn()">
