--- a/legalNotice.html
+++ b/legalNotice.html
@@ -6,7 +6,9 @@
     <title>Legal Notice</title>
     <script src="./js/storageToken.js" defer></script>
     <script src="js/storage.js" defer></script>
-    <script src="js/register.js" defer></script>
+    <script src="./js/register/initRegister.js" defer></script>
+    <script src="./js/register/registration.js" defer></script>
+    <script src="./js/register/designRegister.js" defer></script>
     <script src="js/summary.js" defer></script>
     <script src="js/index.js" defer></script>
     <script src="js/header.js"></script>
