--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy</title>
     <script src="js/storage.js"></script>
-    <script src="js/register.js"></script>
+    <script src="./js/register/initRegister.js" defer></script>
+    <script src="./js/register/registration.js" defer></script>
+    <script src="./js/register/designRegister.js" defer></script>
     <script src="js/summary.js"></script>
     <script src="js/index.js"></script>
     <script src="/js/navBar.js"></script>
