--- a/register.html
+++ b/register.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="/styles/storage.css">
     <script src="./js/storageToken.js" defer></script>
     <script src="./js/storage.js" defer></script>
-    <script src="./js/register.js" defer></script>
+    <script src="./js/register/initRegister.js" defer></script>
+    <script src="./js/register/registration.js" defer></script>
+    <script src="./js/register/designRegister.js" defer></script>
     <script src="./js/index.js" defer></script>
     <link rel="icon" type="image/x-icon" href="/img/join_logo.png">
 </head>
