edit Tasks js rename

--- a/summary.html
+++ b/summary.html
@@ -20,8 +20,8 @@
     <script src="./js/board/searchBoard.js" defer></script>
     <script src="./js/board/dragAndDropBoard.js" defer></script>
     <script src="./js/board/openOverlays.js" defer></script>
-    <script src="./js/board/editTask1.js" defer></script>
-    <script src="./js/board/editTask2.js" defer></script>
+    <script src="./js/board/openEditTask.js" defer></script>
+    <script src="./js/board/editTaskFunctionality.js" defer></script>
     <script src="js/addTask.js"></script>
 
     <link rel="icon" type="image/x-icon" href="/img/join_logo.png" />
