--- a/addTask.html
+++ b/addTask.html
@@ -19,8 +19,8 @@
     <script src="./js/board/searchBoard.js" defer></script>
     <script src="./js/board/dragAndDropBoard.js" defer></script>
     <script src="./js/board/openOverlays.js" defer></script>
-    <script src="./js/board/editTask1.js" defer></script>
-    <script src="./js/board/editTask2.js" defer></script>
+    <script src="./js/board/openEditTask.js" defer></script>
+    <script src="./js/board/editTaskFunctionality.js" defer></script>
     <script src="/js/navBar.js" defer></script>
     <script src ="../js/addTask.js" defer></script>
     <script src="js/header.js" defer></script>
