--- a/board.html
+++ b/board.html
@@ -41,6 +41,9 @@
         <p>Please log in and try again.</p>
         <div class="login-button-div"><a href="index.html" class="login-button">Login</a></div>
     </div>
+    <div class="posAbsolute width100Perc height100Vh dFlex justCenter alignCenter bottomSlideInAndOut d-none zIndex101" id="successBannerBoard">
+        <div class="darkBtnWithoutHover dFlex alignCenter justCenter gap20">Task added to board <img src="../img/board_icon.png" alt=""></div>
+    </div>
     <div id="informationOverlayEditingTask" class="posAbsolute zIndex101 width100Perc height100Vh dFlex justCenter alignCenter d-none bottomSlideInAndOut">
         <div class="darkBtnWithoutHover">Your editing was successful!</div>
     </div>
