--- a/addTask.html
+++ b/addTask.html
@@ -23,6 +23,7 @@
     <script src="./js/board/openEditTask.js" defer></script>
     <script src="./js/board/editTaskFunctionality.js" defer></script>
     <script src="/js/navBar.js" defer></script>
+    <script src ="./js/templates/addTask-html.js" defer></script>
     <script src ="../js/addTask.js" defer></script>
     <script src="js/header.js" defer></script>
     
