--- a/board.html
+++ b/board.html
@@ -19,6 +19,7 @@
     <script src="./js/navBar.js" defer></script>
     <script src="./js/templates/board-html.js" defer></script>
     <script src="./js/summary.js" defer></script>
+    <script src="./js/templates/addTask-html.js" defer></script>
     <script src="./js/addTask.js" defer></script>
     <script src="./js/board/initBoard.js" defer></script>
     <script src="./js/board/searchBoard.js" defer></script>
