--- a/addTask.html
+++ b/addTask.html
@@ -29,7 +29,7 @@
     
     <link rel="icon" type="image/x-icon" href="/img/join_logo.png">
 </head>
-  <body onload="initApp()">
+  <body class="overflowHidden" onload="initApp()">
   <div w3-include-html="/templates/navBar.html"></div>
   <div w3-include-html="/templates/header.html"></div>
   <div class="error-container d-none">
