addTask.js aufgeteilt

--- a/board.html
+++ b/board.html
@@ -20,7 +20,9 @@
     <script src="./js/templates/board-html.js" defer></script>
     <script src="./js/summary.js" defer></script>
     <script src="./js/templates/addTask-html.js" defer></script>
-    <script src="./js/addTask.js" defer></script>
+    <script src ="../js/addTask/addTaskArrays.js" defer></script>
+    <script src ="../js/addTask/addTaskForm.js" defer></script>
+    <script src ="../js/addTask/subtask.js" defer></script>
     <script src="./js/board/initBoard.js" defer></script>
     <script src="./js/board/searchBoard.js" defer></script>
     <script src="./js/board/dragAndDropBoard.js" defer></script>
