--- a/summary.html
+++ b/summary.html
@@ -22,7 +22,9 @@
     <script src="./js/board/openOverlays.js" defer></script>
     <script src="./js/board/openEditTask.js" defer></script>
     <script src="./js/board/editTaskFunctionality.js" defer></script>
-    <script src="js/addTask.js"></script>
+    <script src ="../js/addTask/addTaskArrays.js" defer></script>
+    <script src ="../js/addTask/addTaskForm.js" defer></script>
+    <script src ="../js/addTask/subtask.js" defer></script>
 
     <link rel="icon" type="image/x-icon" href="/img/join_logo.png" />
   </head>
