--- a/addTask.html
+++ b/addTask.html
@@ -24,7 +24,9 @@
     <script src="./js/board/editTaskFunctionality.js" defer></script>
     <script src="/js/navBar.js" defer></script>
     <script src ="./js/templates/addTask-html.js" defer></script>
-    <script src ="../js/addTask.js" defer></script>
+    <script src ="../js/addTask/addTaskArrays.js" defer></script>
+    <script src ="../js/addTask/addTaskForm.js" defer></script>
+    <script src ="../js/addTask/subtask.js" defer></script>
     <script src="js/header.js" defer></script>
     
     <link rel="icon" type="image/x-icon" href="/img/join_logo.png">
