--- a/board.html
+++ b/board.html
@@ -33,7 +33,7 @@
     <link rel="icon" type="image/x-icon" href="/img/join_logo.png">
 
 </head>
-<body class="boardBody overflowHidden" onload="initBoard()">
+<body class="boardBody" onload="initBoard()">
     <div w3-include-html="/templates/navBar.html"></div>
     <div w3-include-html="/templates/header.html"></div>
     <div onclick="closeTask()" class="boardTaskOverlay d-none" id="boardTaskOverlayAddTask">
