--- a/board.html
+++ b/board.html
@@ -38,7 +38,7 @@
     <div w3-include-html="/templates/header.html"></div>
     <div onclick="closeTask()" class="boardTaskOverlay d-none" id="boardTaskOverlayAddTask">
         <div class="dFlex alignCenter justCenter">
-            <form w3-include-html="/templates/addTaskTemplate.html" onsubmit="createTask(), event.preventDefault()" onclick="event.stopPropagation()" id="addTaskOverlay" class="addTaskOverlay animationRightSlideIn posRelative"></form>
+            <form w3-include-html="/templates/addTaskTemplate.html" onsubmit="createTask(), event.preventDefault()" onclick="event.stopPropagation(), closeCategoryField()" id="addTaskOverlay" class="addTaskOverlay animationRightSlideIn posRelative"></form>
         </div>
     </div>
     <div class="savingError d-none"><div class="savingError1">Sorry for saving error! <button onclick="closeSavingError()" class="savingErrorButton">OK</button></div></div>
